회원가입 css수정

--- a/signup.css
+++ b/signup.css
@@ -1,18 +1,39 @@
+.signin_container {
+  width: 768px;
+  margin: 0 auto;
+  padding: 40px 0 40px 0;
+}
 header {
-  height: 64px;
-  display: flex;
-  align-items: center;
+  width: 100%;
+  height: 92px;
+  padding: 20px 0 20px 0;
   border-bottom: 1px solid #EAEDF4;
 }
-header .area_logo a {
-  margin-left: 64px;
+header .area_logo {
+  display: inline-block;
+  padding: 0 0 0 120px;
+}
+header .area_logo .logo {
+  display: flex;
+  font-size: 28px;
+  color: #333333;
+  align-items: center;
+  text-align: center;
+}
+header .area_logo .logo span:nth-child(1) {
+  color: #0038C9;
+  font-weight: 700;
+  font-size: 28px;
+}
+header .area_logo .logo span:nth-child(2) {
+  color: #FFCC00;
+  font-weight: 700;
+  font-size: 28px;
 }
 .signup {
-  padding-top: 55px;
-  width: 360px;
+  width: 505.8px;
   margin: 0 auto;
   position: relative;
-  font-size: 100%;
 }
 form input {
   box-sizing: border-box;
@@ -44,15 +65,64 @@ form .item label strong {
   margin-bottom: 8px;
   display: inline-block;
 }
+form .item:nth-child(5) div {
+  display: flex;
+  gap: 20px;
+}
+form .item:nth-child(5) button {
+  width: 20%;
+  cursor: pointer;
+  background-color: rgba(51, 51, 51, 0.5);
+  border: 1px solid rgba(51, 51, 51, 0.5);
+  border-radius: 4px;
+}
 .btn_signup {
   margin-top: 24px;
   padding-bottom: 100px;
 }
-.btn_signup button {
-  box-sizing: border-box;
+.join_agree {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 60px;
   width: 100%;
-  padding: 10px 16px 12px;
-  height: 48px;
+  height: 420px;
+  border: 1px solid rgba(51, 51, 51, 0.5);
+  border-radius: 4px;
+}
+.join_input {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  width: 93%;
+  top: 30px;
+  left: 20px;
+  gap: 8px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgba(51, 51, 51, 0.5);
+}
+.join_input input {
+  box-sizing: border-box;
+  width: 40px;
+  height: 40px;
+  background: #FAFAFA;
+  border: 1px solid rgba(51, 51, 51, 0.5);
+  border-radius: 4px;
+}
+.join_input label {
+  font-size: 24px;
+  color: #333333;
+  font-weight: 700;
+  line-height: 27px;
+  
+}
+.btn_signup button {
+  width: 100%;
+  height: 65px;
+  box-sizing: border-box;
+  padding: 19px 28px 19px 28px;
   font-size: 16px;
   line-height: 24px;
   border: 1px solid #4876EF;
@@ -60,7 +130,8 @@ form .item label strong {
   border-radius: 4px;
   letter-spacing: -1px;
   text-align: center;
-  color: #AFBAC8;
-  background-color: #EAEDF4;
+  color: #333333;
+  background-color: rgba(51, 51, 51, 0.5);
   overflow: visible;
+  cursor: pointer;
 }
