--- a/styles/signup.css
+++ b/styles/signup.css
@@ -76,6 +76,11 @@ form .item:nth-child(5) button {
   border: 1px solid rgba(51, 51, 51, 0.5);
   border-radius: 4px;
 }
+form .checkmsg {
+  margin-top: 15px;
+  margin-left: 6px;
+  color: red;
+}
 .btn_signup {
   margin-top: 24px;
   padding-bottom: 100px;
