--- a/styles/signup.css
+++ b/styles/signup.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 .signin_container {
   width: 768px;
   margin: 0 auto;
@@ -92,9 +95,9 @@ form .checkmsg {
   gap: 20px;
   margin-top: 60px;
   width: 100%;
-  height: 420px;
+  height: 380px;
   border: 1px solid rgba(51, 51, 51, 0.5);
-  border-radius: 4px;
+  border-radius: 12px;
 }
 .join_input {
   position: absolute;
@@ -110,19 +113,77 @@ form .checkmsg {
 }
 .join_input input {
   box-sizing: border-box;
-  width: 40px;
+  width: 33px;
   height: 40px;
   background: #FAFAFA;
   border: 1px solid rgba(51, 51, 51, 0.5);
   border-radius: 4px;
 }
 .join_input label {
+  display: flex;
+  align-items: center;
   font-size: 24px;
   color: #333333;
   font-weight: 700;
   line-height: 27px;
-  
 }
+.join_input2 {
+  /* position: absolute; */
+  top: 110px;
+  border-bottom: none;
+  padding-bottom: 0;
+}
+.join_input2 input {
+  width: 33px;
+  height: 40px;
+  background-color: #FAFAFA;
+  border: 1px solid rgba(51, 51, 51, 0.5);
+  border-radius: 4px;
+}
+.join_input2 label {
+  height: 22px;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 700;
+}
+.join_input3 {
+  top: 160px;
+  border-bottom: none;
+  padding-bottom: 0;
+}
+.join_input3 label {
+  font-weight: 700;
+  font-size: 20px;
+}
+.join_input4 {
+  top: 210px;
+  border-bottom: none;
+  padding-bottom: 0;
+}
+.join_input4 label {
+  font-weight: 400;
+  font-size: 20px;
+}
+.join_input5 {
+  top: 260px;
+  border-bottom: none;
+  padding-bottom: 0;
+}
+.join_input5 label {
+  font-size: 20px;
+  font-weight: 400;
+}
+.join_input6 {
+  top: 310px;
+  border-bottom: none;
+  padding-bottom: 0;
+}
+.join_input6 label {
+  font-size: 20px;
+  font-weight: 400;
+}
+
 .btn_signup button {
   width: 100%;
   height: 65px;
