--- a/styles/login.css
+++ b/styles/login.css
@@ -120,8 +120,19 @@ main{
   font-size:1.4rem;
   border:none;
   border-radius: 4px;
+  color: #333333;
+  background-color: rgba(51, 51, 51, 0.5);
+}
+.summitbtn_user{
+  position:absolute;
+  top:0; right:5%;
+  width:24%;
+  height:80px;
+  font-size:1.4rem;
+  border:none;
+  border-radius: 4px;
   background:url(images/btn-bg.png) no-repeat center/cover;
-  color:#fff;
+  color:#fff !important;
 }
 .login_input_wrap form input:last-of-type{
   position:absolute;
