--- a/styles/login.css
+++ b/styles/login.css
@@ -123,7 +123,7 @@ main{
   color: #333333;
   background-color: rgba(51, 51, 51, 0.5);
 }
-.summitbtn_user{
+.summitbtn_on{
   position:absolute;
   top:0; right:5%;
   width:24%;
