--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -39,6 +39,10 @@ main{
   margin-top:60px;
 }
 .main_wrap{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 10px;
   width:80%;
   margin:0 auto;
 }
@@ -193,13 +197,17 @@ main{
 }
 
 .ad_wrap{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   width:360px;
   margin:0 auto;
 }
 .ad{
-  width:100%;
-  height: 300px;
-  display:none;
+  box-sizing: border-box;
+  width: 268px;;
+  height: 360px;
+  display:block;
 }
 .btn_signup{
   width:60%;
