--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -136,7 +136,7 @@ main{
   font-size:1.4rem;
   border:none;
   border-radius: 4px;
-  background:url(/style/images/btn-bg.png) no-repeat center/cover;
+  background:url(./images/btn-bg.png) no-repeat center/cover;
   color:#fff !important;
 }
 .login_input_wrap form input:last-of-type{
@@ -183,19 +183,19 @@ main{
   border-radius: 50%;
 }
 .login_social_wrap ul li:nth-of-type(1) a{
-  background:url(/styles/images/btn_social_naver.png) no-repeat center/contain;
+  background:url(./images/btn_social_naver.png) no-repeat center/contain;
 }
 .login_social_wrap ul li:nth-of-type(2) a{
-  background:url(/styles/images/btn_social_kakao.png) no-repeat center/contain;
+  background:url(./images/btn_social_kakao.png) no-repeat center/contain;
 }
 .login_social_wrap ul li:nth-of-type(3) a{
-  background:url(/styles/images/btn_social_google.png) no-repeat center/contain;
+  background:url(./images/btn_social_google.png) no-repeat center/contain;
 }
 .login_social_wrap ul li:nth-of-type(4) a{
-  background:url(/styles/images/btn_social_facebook.png) no-repeat center/contain;
+  background:url(./images/btn_social_facebook.png) no-repeat center/contain;
 }
 .login_social_wrap ul li:nth-of-type(5) a{
-  background:url(/styles/images/btn_social_apple.png) no-repeat center/contain;
+  background:url(./images/btn_social_apple.png) no-repeat center/contain;
 }
 
 .ad_wrap{
