--- a/public/styles/signup.css
+++ b/public/styles/signup.css
@@ -18,7 +18,7 @@ header .area_logo {
 }
 header .area_logo .logo {
   display: flex;
-  font-size: 28px;
+  font-size: 2.8rem;
   color: #333333;
   align-items: center;
   text-align: center;
@@ -26,12 +26,12 @@ header .area_logo .logo {
 header .area_logo .logo span:nth-child(1) {
   color: #0038C9;
   font-weight: 700;
-  font-size: 28px;
+  font-size: 2.8rem;
 }
 header .area_logo .logo span:nth-child(2) {
   color: #FFCC00;
   font-weight: 700;
-  font-size: 28px;
+  font-size: 2.8rem;
 }
 .signup {
   width: 505.8px;
@@ -44,7 +44,7 @@ form input {
   padding: 10px 12px 14px 12px;
   height: 48px;
   margin: 0;
-  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 24px;
   border: 1px solid #8491A7;
   border-radius: 4px;
@@ -61,18 +61,25 @@ form .item {
   margin-top: 24px;
   position: relative;
 }
-form .item label strong {
-  font-size: 16px;
+form .item label {
+  font-size: 2.4rem;
+  line-height: 27px;
+  color: #333333;
+  margin-bottom: 8px;
+  display: flex;
+}
+/* form .item label strong {
+  font-size: 2.4rem;
   line-height: 1.0;
   color: #373F57;
   margin-bottom: 8px;
   display: inline-block;
-}
-form .item:nth-child(5) div {
+} */
+form .item:nth-child(4) div {
   display: flex;
   gap: 20px;
 }
-form .item:nth-child(5) button {
+form .item:nth-child(4) button {
   width: 20%;
   cursor: pointer;
   background-color: rgba(51, 51, 51, 0.5);
@@ -80,7 +87,8 @@ form .item:nth-child(5) button {
   border-radius: 4px;
 }
 form .checkmsg {
-  margin-top: 15px;
+  font-size: 1.4rem;
+  margin-top: 6px;
   margin-left: 6px;
   color: red;
 }
@@ -118,7 +126,7 @@ form .checkmsg {
 .join_input label {
   display: flex;
   align-items: center;
-  font-size: 24px;
+  font-size: 2.4rem;
   color: #333333;
   font-weight: 700;
   line-height: 27px;
@@ -146,7 +154,7 @@ form .checkmsg {
   height: 22px;
   display: flex;
   align-items: center;
-  font-size: 20px;
+  font-size: 2.0rem;
   font-weight: 700;
 }
 .join_input3 {
@@ -156,7 +164,7 @@ form .checkmsg {
 }
 .join_input3 label {
   font-weight: 700;
-  font-size: 20px;
+  font-size: 2.0rem;
 }
 .join_input4 {
   top: 210px;
@@ -165,7 +173,7 @@ form .checkmsg {
 }
 .join_input4 label {
   font-weight: 400;
-  font-size: 20px;
+  font-size: 2.0rem;
 }
 .join_input5 {
   top: 260px;
@@ -176,21 +184,12 @@ form .checkmsg {
   font-size: 20px;
   font-weight: 400;
 }
-.join_input6 {
-  top: 310px;
-  border-bottom: none;
-  padding-bottom: 0;
-}
-.join_input6 label {
-  font-size: 20px;
-  font-weight: 400;
-}
 
 .join_radio {
   margin: 60px 0;
 }
 .join_radio div {
-  font-size: 24px;
+  font-size: 2.4rem;
   margin-bottom: 24px;
   font-weight: 400;
   line-height: 27px;
@@ -212,6 +211,7 @@ form .checkmsg {
 }
 .join_radio ul li label {
   text-align: center;
+  font-size: 2.0rem;
 }
 
 .btn_signup {
@@ -222,7 +222,7 @@ form .checkmsg {
   height: 65px;
   box-sizing: border-box;
   padding: 19px 28px 19px 28px;
-  font-size: 24px;
+  font-size: 2.4rem;
   line-height: 24px;
   border: 1px solid #4876EF;
   border-color: #D7DCE5;
