--- a/public/styles/review.css
+++ b/public/styles/review.css
@@ -2,6 +2,7 @@
 
 .container{
     width:100%;height:100%;
+    background-color: #f5f5f5;
 }
 .modal{
     display:none;
@@ -45,7 +46,7 @@ div h1{
     position:relative;
     background:url(./images/btn_ham.png) no-repeat center/contain;
     cursor:pointer;
-    z-index: 13;
+    z-index: 1;
 }
 .div_line {
     width: 100%;
@@ -140,4 +141,123 @@ div h1{
     color: #fafafa;
     overflow: visible;
     cursor: pointer;
-  }
+}
+.btn_write {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    left: 275px;
+    top: 552px;   
+    background: url(./images/btn_write_modal.png) no-repeat center;
+    background-size: auto;
+    background-color: #3d47FF;
+    border-radius: 60px;
+    cursor:pointer;
+    z-index: 2;
+}
+.total_score {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 16% 12.8%;
+    position: absolute;
+    width: 78.7%;
+    height: 467px;
+    left: 40px;
+    top: 496px;
+    background:#fff;
+    border-radius: 5px;
+}
+.total_score_corpname {
+    position: relative;
+    width: 100%;
+    height: 23px;
+    font-weight: 700;
+    font-size: 2.0rem;
+    line-height: 23px;
+}
+.total_score_main {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    position: relative;
+    width: 136px;
+    height: 78px;
+    top: 52px;
+}
+.total_score_main p:nth-of-type(1) {
+    width: 28px;
+    font-weight: 800;
+    font-size: 1.8rem;
+    line-height: 20px;
+}
+.total_score_main div:nth-of-type(1) {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 136px;
+    height:28px;
+}
+.star_bg {
+    position: relative;
+    background: url(./images/star_bg.png) no-repeat;
+}
+.star_bg span{
+    position: absolute;
+    background: url(./images/star_selected.png) no-repeat;
+    width: auto;
+    height: 28px;
+}
+.total_score_main p:nth-of-type(2) {
+    width: 60px;
+    font-weight: 400;
+    font-size: 1.2rem;
+    line-height: 14px;
+    color: #aaaaaa;
+    letter-spacing: -0.02rem;
+}
+.total_score_detail {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    position: relative;
+    width: 200px;
+    top: 98px;
+}
+.total_detail_star {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 12px;
+    width: 100%;
+    height: 18px;
+}
+.total_detail_star span:nth-of-type(1) {
+    width: 26px;
+    height: 18px;
+    font-weight: 800;
+    font-size: 1.6rem;
+    color: rgba(0,0,0,0.5);
+}
+.total_detail_star span:nth-of-type(2) {
+    display: flex;
+    width: 18px;
+    height: 18px;
+    background: url(./images/Star.png);
+}
+.total_detail_star span:nth-of-type(3) {
+    width: 108px;
+    height: 18px;
+    font-weight: 700;
+    font-size: 1.6rem;
+    letter-spacing: -0.02em;
+    color: #000;
+}
+
