--- a/public/styles/review.css
+++ b/public/styles/review.css
@@ -1,7 +1,8 @@
 @charset "utf-8";
 
+/* z-index: modal 11, header10; */
+
 .container{
-    position: absolute;
     width:100%;height:100%;
     background-color: #f5f5f5;
     overflow:auto;
@@ -16,22 +17,21 @@
     z-index: 11;
 }
 header{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 40px 0px 28px;
     width:100%;
-    height:96px;    
+    height:96px ;
+    position: fixed;
+    background: #fafafa;
+    z-index: 10;
 }
 .header_wrap{
     display:flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 0px;
     width:78.7%;
     height:28px;
+    margin: 0 auto;
+    margin-top: 40px;
 }
 div h1{
     display:flex;
@@ -48,7 +48,17 @@ div h1{
     position:relative;
     background:url(./images/btn_ham.png) no-repeat center/contain;
     cursor:pointer;
-    z-index: 1;
+}
+main{
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 96px;
+    overflow: hidden;
+}
+.corp_info_wrap{
+    width: 100%;
+    overflow: hidden;
 }
 .div_line {
     width: 100%;
@@ -56,40 +66,37 @@ div h1{
     background-color: #1e2480;
 }
 .corp_info {
-    display: block;
+    position: relative;
     width: 78.7%;
     height: 260px;
-    left: 40px;
-    top: 176px;
+    margin: auto;
+    margin-top: -40px;
     gap: 16px;
-    position: absolute;
 }
 .corp_info_image {
-    display: flex;
+    float: left;
     width: 27.1%;
-    max-width: 80px;
-    max-height: 80px;
+    max-width: 120px;
+    max-height: 120px;
     background-color: #fff;
-    position: relative;
     box-shadow: inset 0px 1px 2px rgba(0,0,0,0.25);
     border-radius: 5px;
 }
 .corp_info_image::after{
     content: "";
     display: block;
-    padding-bottom: 100%;
+    padding-bottom: 85%;
 }
 .corp_info_data {
+    float: right;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
     gap: 16px;
     width: 67.5%;
-    height: 61px;
-    left: 96px;
-    top: 60px;
-    position: absolute;
+    height: 121px;
+    margin: 0 auto;
+    margin-top: 60px;
+
 }
 .corp_info_data div:nth-child(1) {
     display: flex;
@@ -97,40 +104,46 @@ div h1{
     align-items: flex-end;
     gap: 16px;
 }
-.corp_info_data span:nth-child(1) {
-    display: flex;
+.corp_info_data>div>span:nth-child(1) {
     font-size: 2.4rem;
-    align-items: center;
 }
-.corp_info_data span:nth-child(2) {
-    display: flex;
+.corp_info_data>div>span:nth-child(2) {
     font-size: 1.4rem;
-    align-items: center;
     line-height: 16px;
 }
-.corp_info_data div:nth-child(2) {
+.corp_info_data>div:nth-of-type(2){
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
-    gap: 20px;
-    font-size: 1.4rem;
+    align-items: center;
+    gap: 6px;
 }
-.hashtag_top {
+.corp_info_data div>div:nth-child(1) {
+    width: 86px;
+    height: 18px;
+}
+.corp_info_data>div:nth-of-type(2)>span:nth-of-type(1){
+    font-size: 1.6rem;
+    font-weight: 700;
+    line-height: 18px;
+}
+.corp_info_data>div:nth-of-type(2)>span:nth-of-type(2){
     font-size: 1.4rem;
     line-height: 16px;
+    color: #aaaaaa;
+}
+.hashtag_top {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap;
+    font-size: 1.4rem;
+    line-height: 16px;
+    align-items: center;
     gap: 12px;
-    width: 95%;
+    width: 100%;
     height: 44px;
 }
 .btn_review {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 54.5%;
+    width: 160px;
     height: 48px;
     position: absolute;
     right: 0;
@@ -138,23 +151,15 @@ div h1{
     background-color: #3d47FF;
     border-radius: 8px;
     font-size: 1.4rem;
-    line-height: 16px;
-    text-align: center;
     color: #fafafa;
-    overflow: visible;
     cursor: pointer;
 }
 .btn_write {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
     position: fixed;
     width: 60px;
     height: 60px;
-    left: 275px;
-    top: 552px;   
+    right: 10%;
+    bottom: 10%;
     background: url(./images/btn_write_modal.png) no-repeat center;
     background-size: 50%;
     background-color: #3d47FF;
@@ -163,12 +168,10 @@ div h1{
     z-index: 2;
 }
 .total_score {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
     padding: 16% 12.8%;
-    position: absolute;
     width: 78.7%;
+    margin: 0 auto;
+    margin-top: 50px;
     height: 467px;
     left: 40px;
     top: 496px;
@@ -176,7 +179,6 @@ div h1{
     border-radius: 5px;
 }
 .total_score_corpname {
-    position: relative;
     width: 100%;
     height: 23px;
     font-weight: 700;
@@ -188,7 +190,6 @@ div h1{
     flex-direction: column;
     align-items: flex-start;
     gap: 8px;
-    position: relative;
     width: 136px;
     height: 78px;
     top: 52px;
