--- a/public/styles/review.css
+++ b/public/styles/review.css
@@ -68,6 +68,7 @@ main{
 	background-color: #1e2480;
 }
 .corp_info {
+	display: flex;
 	position: relative;
 	width: 78.7%;
 	height: 260px;
@@ -76,17 +77,11 @@ main{
 }
 .corp_info_image {
 	float: left;
-	width: 27.1%;
-	max-width: 120px;
-	max-height: 120px;
+	width: 80px;
+	height: 80px;
 	background-color: #fff;
 	box-shadow: inset 0px 1px 2px rgba(0,0,0,0.25);
 	border-radius: 5px;
-}
-.corp_info_image::after{
-	content: "";
-	display: block;
-	padding-bottom: 85%;
 }
 .corp_info_data {
 	float: right;
@@ -97,6 +92,7 @@ main{
 	height: 121px;
 	margin: 0 auto;
 	margin-top: 60px;
+	margin-left: 12px;
 }
 .corp_info_data div:nth-child(1) {
 	display: flex;
@@ -171,7 +167,7 @@ main{
 	padding: 60px 48px;
 	width: 78.7%;
 	margin: 0 auto;
-	margin-top: 50px;
+	margin-top: 40px;
 	background:#fff;
 	border-radius: 5px;
 }
@@ -236,12 +232,9 @@ main{
 .total_detail_star {
 	display: flex;
 	flex-direction: row;
-	gap: 12px;
 	height: 18px;
 }
 .total_detail_star span:nth-of-type(1) {
-	width: 26px;
-	height: 18px;
 	font-weight: 800;
 	font-size: 1.6rem;
 	color: rgba(0,0,0,0.5);
@@ -250,16 +243,21 @@ main{
 	display: flex;
 	width: 18px;
 	height: 18px;
+	margin-left: 6px;
 	background: url(./images/Star.png);
 	background-size: contain;
 }
 .total_detail_star span:nth-of-type(3) {
-	width: 108px;
+	width: 88px;
 	height: 18px;
 	font-weight: 700;
 	font-size: 1.6rem;
 	letter-spacing: -0.02em;
+	margin-left: 12px;
 	color: #000;
+}
+.total_score_detail>li:nth-of-type(2)>span:nth-of-type(3){
+	width: 108px;
 }
 .contents {
 	width: 78.7%;
@@ -367,12 +365,15 @@ main{
 	margin-top: 12px;
 }
 .comment_hashtag {
-	display:inline;
+	position: relative;
 	width: 100%;
 	height: 22px;
 	overflow-x: auto;
 	white-space: nowrap;
-	
+	text-overflow: clip;
+}
+.comment_hashtag::-webkit-scrollbar{
+	display: none;
 }
 .comment_hashtag>span {
 	margin-right: 12px;
@@ -382,11 +383,12 @@ main{
 	height: 22px;
 	width: auto;
 }
-.comment_hashtag>div {
-	display: block;
-	position: relative;
-	margin-top: -21px;
-	height: 22px;
+.comment_hashtag::after{
+	content: "";
+	position: absolute;
+	right: 0px;
+	width: 100%;
+	height: 100%;
 	background: linear-gradient(270deg, #FFFFFF 1.68%, rgba(255, 255, 255, 0) 11.39%);
 }
 .comment_like {
@@ -407,7 +409,6 @@ main{
 	background-size: contain;
 }
 .comment_like>span:nth-of-type(2) {
-	width: 67x;
 	height: 20px;
 	font-size: 1.4rem;
 	line-height: 140%;
@@ -422,10 +423,93 @@ main{
 }
 
 
-@media screen and (min-width:768px) {
+@media screen and (min-width: 768px) {
+	.header_wrap{
+		width:86%;
+		margin-top: 60px;
+	}
+	.corp_info {
+		width: 86%;
+	}
+	.corp_info_image {
+		width: 120px;
+		height: 120px;
+	}
+	.corp_info_data {
+		margin-left: 32px;
+	}
+	.corp_info_data>div>span:nth-child(1) {
+		font-size: 2.8rem;
+	}
+	.corp_info_data div>div:nth-child(1) {
+		width: 116px;
+		height: 24px;
+	}
+	.corp_info_data>div:nth-of-type(2)>span:nth-of-type(1){
+		font-size: 1.8rem;
+	}
+	.corp_info_data>div:nth-of-type(2)>span:nth-of-type(2){
+		font-size: 1.6rem;
+	}
+	.btn_review {
+		width: 240px;
+		height: 60px;
+		font-size: 1.6rem;
+	}
+	.btn_write {
+		width: 80px;
+		height: 80px;
+	}
+	.total_score {
+		width: 86%;
+	}
+	.total_score_corpname {
+		font-size: 2.4rem;
+	}
+	.total_score_wrap {
+		gap: 30px;
+	}
+	.total_score_main p:nth-of-type(1) {
+		font-size: 2.2rem;
+	}
+	.total_score_main div:nth-of-type(1) {
+		width: 171px;
+		height:35px;
+	}
+	.total_score_main p:nth-of-type(2) {
+		font-size: 1.4rem;
+	}
+	.total_detail_star span:nth-of-type(1) {
+		font-size: 1.8rem;
+	}
+	.total_detail_star span:nth-of-type(2) {
+		width: 20px;
+		height: 20px;
+	}
+	.total_detail_star span:nth-of-type(3) {
+		font-size: 1.8rem;
+	}
+	.total_score_detail>li:nth-of-type(2)>span:nth-of-type(3){
+		width: 121px;
+	}
+	.contents {
+		width: 86%;
+	}
 	.contents_review {
 		display: flex;
+		gap: 60px;
 	}
+	.review_star>p {
+		font-size: 2.0rem;
+	}
+	.btn_star_detail>div:nth-of-type(1) {
+		width: 126px;
+		height: 26px;
+	}
+
+
+
+
 	.review_comment {
 		margin-top: 0px;
 	}
