--- a/public/styles/review.css
+++ b/public/styles/review.css
@@ -371,6 +371,7 @@ main{
 	overflow-x: auto;
 	white-space: nowrap;
 	text-overflow: clip;
+	background: linear-gradient(270deg, #FFFFFF 1.68%, rgba(255, 255, 255, 0) 11.39%);
 }
 .comment_hashtag::-webkit-scrollbar{
 	display: none;
@@ -383,14 +384,30 @@ main{
 	height: 22px;
 	width: auto;
 }
-.comment_hashtag::after{
+.test::before {
+	content: "";
+	position: relative;
+	width: 100%;
+}
+.test {
+	display:flex;
+	content: "";
+	position:absolute;
+	margin-top: 50px;
+	margin-right: 0px;
+	right: 0px;
+	width: 100%;
+	height: 22px;
+	background: linear-gradient(270deg, #FFFFFF 1.68%, rgba(255, 255, 255, 0) 11.39%);
+}
+/* .comment_hashtag::after{
 	content: "";
 	position: absolute;
 	right: 0px;
 	width: 100%;
 	height: 100%;
 	background: linear-gradient(270deg, #FFFFFF 1.68%, rgba(255, 255, 255, 0) 11.39%);
-}
+} */
 .comment_like {
 	display: flex;
 	align-items: center;
