--- a/public/styles/review.css
+++ b/public/styles/review.css
@@ -1,9 +1,6 @@
 @charset "utf-8";
 /* z-index: modal 11, header10; button9 */
 
-
-
-
 .container{
 	width:100%;height:100%;
 	background-color: #f5f5f5;
@@ -163,11 +160,18 @@ main{
 	cursor:pointer;
 	z-index: 9;
 }
-.total_score {
-	padding: 60px 48px;
+.contents_wrap {
+	display: flex;
 	width: 78.7%;
 	margin: 0 auto;
 	margin-top: 40px;
+}
+.contents_main {
+	width: 100%;
+}
+.total_score {
+	padding: 60px 48px;
+	margin: 0 auto;
 	background:#fff;
 	border-radius: 5px;
 }
@@ -260,7 +264,6 @@ main{
 	width: 108px;
 }
 .contents {
-	width: 78.7%;
 	margin: 0 auto;
 	margin-top: 20px;
 	background-color: #fff;
@@ -393,14 +396,6 @@ main{
 	background: linear-gradient(270deg, #fff 10%, rgba(255, 255, 255, 0) 30%);
 	z-index: 2;
 }
-/* .comment_hashtag::after{
-	content: "";
-	position: absolute;
-	right: 0px;
-	width: 100%;
-	height: 100%;
-	background: linear-gradient(270deg, #FFFFFF 1.68%, rgba(255, 255, 255, 0) 11.39%);
-} */
 .comment_like {
 	display: flex;
 	align-items: center;
@@ -430,6 +425,9 @@ main{
 	font-size: 1.4rem;
 	line-height: 140%;
 	color: #aaaaaa;
+}
+.sidebar {
+	display: none;
 }
 
 /* 테블릿 768 사이즈 반응형 */
@@ -481,7 +479,7 @@ main{
 		width: 80px;
 		height: 80px;
 	}
-	.total_score {
+	.contents_wrap {
 		width: 86%;
 	}
 	.total_score_corpname {
@@ -515,9 +513,6 @@ main{
 	}
 	.total_score_detail>li:nth-of-type(2)>span:nth-of-type(3){
 		width: 121px;
-	}
-	.contents {
-		width: 86%;
 	}
 	.contents_review {
 		display: flex;
@@ -592,8 +587,12 @@ main{
 	.btn_review {
 		font-size: 1.8rem;
 	}
-	.total_score {
+	.contents_wrap {
 		width: 66.667%;
+	}
+	.contents_main {
+		float: left;
+		width: 68.36%;
 	}
 	.total_score_corpname {
 		font-size: 2.8rem;
@@ -617,42 +616,94 @@ main{
 	.total_score_detail>li:nth-of-type(2)>span:nth-of-type(3){
 		width: 135px;
 	}
-	/* .contents {
-		width: 86%;
-	}
-	.contents_review {
-		display: flex;
-		gap: 60px;
-	}
 	.review_star>p {
-		font-size: 2.0rem;
-	}
-	.btn_star_detail>div:nth-of-type(1) {
-		width: 126px;
-		height: 26px;
-	}
-	.review_comment {
-		margin-top: 0px;
+		font-size: 2.4rem;
 	}
 	.highlight>p {
-		font-size: 2.0rem;
-	}
-	.highlight>div {
-		display: flex;
-		margin-top: 16px;
-		gap: 4px;
-	}
-	.highlight>div>span:nth-of-type(1) {
-		width: 18px;
-		height: 18px;
+		font-size: 2.4rem;
 	}
 	.highlight>div>span:nth-of-type(2) {
-		font-size: 1.4rem;
+		font-size: 1.6rem;
 	}
 	.pros_cons>p:nth-of-type(1) {
-		font-size: 1.8rem;
+		font-size: 2.0rem;
 	}
-	.comment_hashtag {
-		height: 26px;
-	} */
+	.sidebar {
+		display: block;
+		width: 30%;
+		overflow: hidden;
+		height: auto;
+		padding: 40px 42px;
+		margin: 0;
+		margin-left: 21px;
+		background-color: rgba(0,0,0,0.03);
+		border-radius: 5px;
+	}
+	.sidebar>p {
+		font-weight: 700;
+		font-size: 2.0rem;
+	}
+	.sidebar>input {
+		width: 300px;
+		height: 38px;
+		margin-top: 20px;
+		border-bottom: 1px solid #aaaaaa;		
+	}
+	.side_contents>ul>li {
+		margin: 20px 0px;
+	}
+	.side_contents>ul>li>p {
+		font-size: 1.8rem;
+		font-weight: 700;
+	}
+	.side_contents>ul>li>div:nth-of-type(1) {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		gap: 6px;
+		margin-top: 6px;
+	}
+	.side_contents>ul>li>div:nth-of-type(1)>div {
+		width: 76px;
+		height: 16px;
+	}
+	.side_contents>ul>li>div:nth-of-type(1)>span:nth-of-type(1) {
+		font-size: 1.4rem;
+		font-weight: 700;
+		line-height: 16px;
+	}
+	.side_contents>ul>li>div:nth-of-type(1)>span:nth-of-type(2) {
+		font-size: 1.4rem;
+		line-height: 16px;
+		color: #aaaaaa;
+	}
+	.side_contents>ul>li>div:nth-of-type(2) {
+		padding: 10px 20px;
+		overflow: hidden;
+		width: 100%;
+		height: auto;
+		min-height: 108px;
+		margin-top: 6px;
+		background-color: #ffffff;
+		border: 1px solid rgba(0,0,0,0.3);
+		border-radius: 5px;
+	}
+	.side_contents>ul>li>div:nth-of-type(2)>p:nth-of-type(1) {
+		width: 100%;
+		font-weight: 400;
+		font-size: 1.6rem;
+		word-wrap: break-word;
+	}
+	.side_contents>ul>li>div:nth-of-type(2)>p:nth-of-type(2) {
+		font-size: 1.4rem;
+		margin-top: 9px;
+	}
+	.side_contents>ul>li>div:nth-of-type(2)>button {
+		float: right;
+		width: 63px;
+		height: 28px;
+		margin-top: 9px;
+		border: 1px solid rgba(0,0,0,0.4);
+		border-radius: 5px;
+	}
 }
