--- a/public/styles/review.css
+++ b/public/styles/review.css
@@ -7,13 +7,125 @@
 	overflow:auto;
 }
 .modal{
-	display:none;
+	display:;
 	position:fixed;
-	top:0;left:0;
-	width:100%;
-	height:100%;
+	top:10%;left:10%;
+	width:80vw;
+	height:80vh;
 	background:#fff;
 	z-index: 11;
+}
+.modal>div:nth-of-type(1) {
+	display: flex;
+	width: 100%;
+	height: 6.7%;
+	background-color: #3D47FF;
+	padding: 13px 20px;
+	align-items: center;
+	font-size: 2.4rem;
+	color: #ffffff;
+}
+.modal>div:nth-of-type(2) {
+	height: 1.34%;
+	background-color: #ffffff;
+}
+.modal>div:nth-of-type(2)>div {
+	width: 33.3%;
+	height: 100%;
+	background-color: #1e2480;
+}
+.modal>div:nth-of-type(3) {
+	height: 70%;
+	margin-top: 30px;
+	margin-left: 40px;
+}
+.modal_page1>p {
+	font-size: 1.8rem;
+	line-height: 140%;
+}
+.modal_page1>div {
+	width: 71%;
+	display: flex;
+	flex-direction: column;
+	margin-top: 60px;
+	gap: 40px;
+}
+.modal_page1_item {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+.modal_page1_item>label {
+	font-weight: 700;
+	font-size: 1.8rem;
+}
+.modal_page1_item>input {
+	width: 71.68%;
+	padding: 17px 20px;
+	border: 1px solid #aaaaaa;
+	border-radius: 5px;
+	font-size: 1.8rem;
+}
+.work_date {
+	width: 71.68%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+.work_date>div {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	gap: 8px;
+}
+.work_date>div>div {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	gap: 8px;
+}
+.work_date>div>div>span {
+	font-size: 1.8rem;
+}
+.work_date>div>div>div {
+	display: flex;
+	flex-direction: row;
+}
+.work_date>div>div>div>input {
+	width: 20px;
+	height: 20px;
+	border: 1px solid #000;
+}
+.work_date>div>div>div>label {
+	margin-left: 4px;
+	font-size: 1.8rem;
+}
+
+.modal>div:nth-of-type(4) {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	padding: 20px 28px;
+	position: absolute;
+	width: 100%;
+	height: 100px;
+	bottom: 0;
+	background-color: #eeeeee;
+}
+.modal>div:nth-of-type(4)>button:nth-of-type(1) {
+	width: 20%;
+	background-color: #ffffff;
+	border-radius: 5px;
+	font-size: 1.8rem;
+}
+.modal>div:nth-of-type(4)>button:nth-of-type(2) {
+	width: 20%;
+	background-color: #000dff;
+	border-radius: 5px;
+	font-size: 1.8rem;
+	color: #ffffff;
 }
 header{
 	width:100%;
